[package]
authors = ["Robin Kruppe <robin.kruppe@gmail.com>"]
description = "Axis-aligned bounding box (AABB), biased towards ray tracing"
license = "MIT/Apache-2.0"
name = "beebox"
readme = "README.md"
repository = "https://github.com/rkruppe/beebox.rs"
documentation = "https://docs.rs/beebox/0.1.0/"
version = "0.1.0"

[dependencies]
cgmath = "0.12.0"
