[package]
authors = ["Robin Kruppe <robin.kruppe@gmail.com>"]
description = "Axis-aligned bounding box (AABB), biased towards ray tracing"
documentation = "https://docs.rs/beebox/0.1.1/"
license = "MIT/Apache-2.0"
name = "beebox"
readme = "README.md"
repository = "https://github.com/rkruppe/beebox.rs"
version = "0.1.1"

[dependencies]
cgmath = "0.13.1"
